<resources>
    <string name="app_name">Eletic Car App</string>
    <string name="app_title">Carros elétricos</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço:</string>
    <string name="bateria">Bateria:</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga:</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_wifi">Ops, Internet não disponível!</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde.</string>
    <string name="saved_calc">saved_calc</string>
</resources>