<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />
    <TextView
        android:id="@+id/tv_titulo"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calcular_autonomia"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />


    <EditText
        android:id="@+id/Edtxt_Preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"/>

    <EditText
        android:id="@+id/Edtxt_KmPrecorido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/km_percorrido"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/Edtxt_Preco_kwh"
        app:layout_constraintStart_toStartOf="@+id/Edtxt_Preco_kwh"
        app:layout_constraintTop_toBottomOf="@+id/Edtxt_Preco_kwh"/>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/Edtxt_KmPrecorido"
        app:layout_constraintStart_toStartOf="@+id/Edtxt_KmPrecorido"
        app:layout_constraintEnd_toEndOf="@+id/Edtxt_KmPrecorido"
        android:text="@string/calcular"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />


</androidx.constraintlayout.widget.ConstraintLayout>